--- a/sell-your-business.html
+++ b/sell-your-business.html
@@ -293,8 +293,17 @@
 
     </section><!-- /Features Section -->
 
+    <!-- As Seen In Section -->
+    <section class="as-seen-in py-5" style="background-color: #F4EFE7;">
+      <div class="container text-center" data-aos="fade-up">
+        <div class="d-flex justify-content-center align-items-center">
+          <img src="assets/img/thetimes.jpg" alt="As seen in The Times" class="img-fluid" style="max-width: 500px; width: 100%; height: auto; padding: 0 15px;">
+        </div>
+      </div>
+    </section>
+
     <!-- Why Sell to For Legacy Section -->
-    <section id="why-sell" class="services section">
+    <section id="why-sell" class="services section" style="background-color: #F4EFE7;">
       <div class="container section-title" data-aos="fade-up">
         <h2>Why Sell to For Legacy?</h2>
         <p>Your options</p>
